--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JavaScript</title>
+        <title>Ajedrez</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="./css/main.css">
@@ -16,99 +16,151 @@
         <main>
             <div class="container-fluid" id="board">
                 <div class="row row8 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA8 colLocker"></div>
-                    <div class="col-1 ColB8 colLocker"></div>
-                    <div class="col-1 ColC8 colLocker"></div>
-                    <div class="col-1 ColD8 colLocker"></div>
-                    <div class="col-1 ColE8 colLocker"></div>
-                    <div class="col-1 ColF8 colLocker"></div>
-                    <div class="col-1 ColG8 colLocker"></div>
-                    <div class="col-1 ColH8 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>8</span>
+                    </div>
+                    <div class="col-1 col8A colLocker"></div>
+                    <div class="col-1 col8B colLocker blackLocker"></div>
+                    <div class="col-1 col8C colLocker"></div>
+                    <div class="col-1 col8D colLocker blackLocker"></div>
+                    <div class="col-1 col8E colLocker"></div>
+                    <div class="col-1 col8F colLocker blackLocker"></div>
+                    <div class="col-1 col8G colLocker"></div>
+                    <div class="col-1 col8H colLocker blackLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row7 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA7 colLocker"></div>
-                    <div class="col-1 ColB7 colLocker"></div>
-                    <div class="col-1 ColC7 colLocker"></div>
-                    <div class="col-1 ColD7 colLocker"></div>
-                    <div class="col-1 ColE7 colLocker"></div>
-                    <div class="col-1 ColF7 colLocker"></div>
-                    <div class="col-1 ColG7 colLocker"></div>
-                    <div class="col-1 ColH7 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>7</span>
+                    </div>
+                    <div class="col-1 col7A colLocker blackLocker"></div>
+                    <div class="col-1 col7B colLocker"></div>
+                    <div class="col-1 col7C colLocker blackLocker"></div>
+                    <div class="col-1 col7D colLocker"></div>
+                    <div class="col-1 col7E colLocker blackLocker"></div>
+                    <div class="col-1 col7F colLocker"></div>
+                    <div class="col-1 col7G colLocker blackLocker"></div>
+                    <div class="col-1 col7H colLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row6 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA6 colLocker"></div>
-                    <div class="col-1 ColB6 colLocker"></div>
-                    <div class="col-1 ColC6 colLocker"></div>
-                    <div class="col-1 ColD6 colLocker"></div>
-                    <div class="col-1 ColE6 colLocker"></div>
-                    <div class="col-1 ColF6 colLocker"></div>
-                    <div class="col-1 ColG6 colLocker"></div>
-                    <div class="col-1 ColH6 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>6</span>
+                    </div>
+                    <div class="col-1 col6A colLocker"></div>
+                    <div class="col-1 col6B colLocker blackLocker"></div>
+                    <div class="col-1 col6C colLocker"></div>
+                    <div class="col-1 col6D colLocker blackLocker"></div>
+                    <div class="col-1 col6E colLocker"></div>
+                    <div class="col-1 col6F colLocker blackLocker"></div>
+                    <div class="col-1 col6G colLocker"></div>
+                    <div class="col-1 col6H colLocker blackLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row5 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA5 colLocker"></div>
-                    <div class="col-1 ColB5 colLocker"></div>
-                    <div class="col-1 ColC5 colLocker"></div>
-                    <div class="col-1 ColD5 colLocker"></div>
-                    <div class="col-1 ColE5 colLocker"></div>
-                    <div class="col-1 ColF5 colLocker"></div>
-                    <div class="col-1 ColG5 colLocker"></div>
-                    <div class="col-1 ColH5 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>5</span>
+                    </div>
+                    <div class="col-1 col5A colLocker blackLocker"></div>
+                    <div class="col-1 col5B colLocker"></div>
+                    <div class="col-1 col5C colLocker blackLocker"></div>
+                    <div class="col-1 col5D colLocker"></div>
+                    <div class="col-1 col5E colLocker blackLocker"></div>
+                    <div class="col-1 col5F colLocker"></div>
+                    <div class="col-1 col5G colLocker blackLocker"></div>
+                    <div class="col-1 col5H colLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row4 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA4 colLocker"></div>
-                    <div class="col-1 ColB4 colLocker"></div>
-                    <div class="col-1 ColC4 colLocker"></div>
-                    <div class="col-1 ColD4 colLocker"></div>
-                    <div class="col-1 ColE4 colLocker"></div>
-                    <div class="col-1 ColF4 colLocker"></div>
-                    <div class="col-1 ColG4 colLocker"></div>
-                    <div class="col-1 ColH4 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>4</span>
+                    </div>
+                    <div class="col-1 col4A colLocker"></div>
+                    <div class="col-1 col4B colLocker blackLocker"></div>
+                    <div class="col-1 col4C colLocker"></div>
+                    <div class="col-1 col4D colLocker blackLocker"></div>
+                    <div class="col-1 col4E colLocker"></div>
+                    <div class="col-1 col4F colLocker blackLocker"></div>
+                    <div class="col-1 col4G colLocker"></div>
+                    <div class="col-1 col4H colLocker blackLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row3 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA3 colLocker"></div>
-                    <div class="col-1 ColB3 colLocker"></div>
-                    <div class="col-1 ColC3 colLocker"></div>
-                    <div class="col-1 ColD3 colLocker"></div>
-                    <div class="col-1 ColE3 colLocker"></div>
-                    <div class="col-1 ColF3 colLocker"></div>
-                    <div class="col-1 ColG3 colLocker"></div>
-                    <div class="col-1 ColH3 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>3</span>
+                    </div>
+                    <div class="col-1 col3A colLocker blackLocker"></div>
+                    <div class="col-1 col3B colLocker"></div>
+                    <div class="col-1 col3C colLocker blackLocker"></div>
+                    <div class="col-1 col3D colLocker"></div>
+                    <div class="col-1 col3E colLocker blackLocker"></div>
+                    <div class="col-1 col3F colLocker"></div>
+                    <div class="col-1 col3G colLocker blackLocker"></div>
+                    <div class="col-1 col3H colLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row2 rowLocker">
-                    <div class="col-2"></div>
-                    <div class="col-1 ColA2 colLocker"></div>
-                    <div class="col-1 ColB2 colLocker"></div>
-                    <div class="col-1 ColC2 colLocker"></div>
-                    <div class="col-1 ColD2 colLocker"></div>
-                    <div class="col-1 ColE2 colLocker"></div>
-                    <div class="col-1 ColF2 colLocker"></div>
-                    <div class="col-1 ColG2 colLocker"></div>
-                    <div class="col-1 ColH2 colLocker"></div>
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>2</span>
+                    </div>
+                    <div class="col-1 col2A colLocker"></div>
+                    <div class="col-1 col2B colLocker blackLocker"></div>
+                    <div class="col-1 col2C colLocker"></div>
+                    <div class="col-1 col2D colLocker blackLocker"></div>
+                    <div class="col-1 col2E colLocker"></div>
+                    <div class="col-1 col2F colLocker blackLocker"></div>
+                    <div class="col-1 col2G colLocker"></div>
+                    <div class="col-1 col2H colLocker blackLocker"></div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row row1 rowLocker">
+                    <div class="col-1"></div>
+                    <div class="col-1 gridMapCol">
+                        <span>1</span>
+                    </div>
+                    <div class="col-1 col1A colLocker blackLocker"></div>
+                    <div class="col-1 col1B colLocker"></div>
+                    <div class="col-1 col1C colLocker blackLocker"></div>
+                    <div class="col-1 col1D colLocker"></div>
+                    <div class="col-1 col1E colLocker blackLocker"></div>
+                    <div class="col-1 col1F colLocker"></div>
+                    <div class="col-1 col1H colLocker blackLocker"></div>
+                    <div class="col-1 col1G colLocker"></div>
                     <div class="col-2"></div>
-                    <div class="col-1 ColA1 colLocker"></div>
-                    <div class="col-1 ColB1 colLocker"></div>
-                    <div class="col-1 ColC1 colLocker"></div>
-                    <div class="col-1 ColD1 colLocker"></div>
-                    <div class="col-1 ColE1 colLocker"></div>
-                    <div class="col-1 ColF1 colLocker"></div>
-                    <div class="col-1 ColG1 colLocker"></div>
-                    <div class="col-1 ColH1 colLocker"></div>
+                </div>
+                <div class="row rowLocker">
+                    <div class="col-2"></div>
+                    <div class="col-1 gridMapRow">
+                        <span>A</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>B</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>C</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>D</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>E</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>F</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>G</span>
+                    </div>
+                    <div class="col-1 gridMapRow">
+                        <span>H</span>
+                    </div>
                     <div class="col-2"></div>
                 </div>
             </div>
