--- a/pages/login.html
+++ b/pages/login.html
@@ -1,85 +1,117 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="iniciar, sesion">
-        <meta name="description" content="Inicia sesion para acceder al juego">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Acme&family=Dancing+Script:wght@400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css">
-        <title>Iniciar Sesion - Ajedrez</title>
-    </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="keywords" content="iniciar, sesion" />
+		<meta name="description" content="Inicia sesion para acceder al juego" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Acme&family=Dancing+Script:wght@400;500;600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="../css/main.css" />
+		<title>Iniciar Sesion - Ajedrez</title>
+	</head>
 
-    <body>
-        <div class="container-fluid p-0">
-            <header>
-                <div class="boxLogo">
-                    <a href="../index.html">
-                        <h2>Proyecto Ajedrez</h2>
-                    </a>
-                </div>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="../pages/login.html">Iniciar Sesion</a>
-                        </li>
-                        <li>
-                            <a href="../pages/registro.html">Registro</a>
-                        </li>
-                    </ul>
-                </nav>
-            </header>
+	<body>
+		<div class="container-fluid p-0">
+			<header>
+				<div class="boxLogo">
+					<a href="../index.html">
+						<h2>Proyecto Ajedrez</h2>
+					</a>
+				</div>
+				<nav>
+					<ul>
+						<li>
+							<a href="../pages/login.html">Iniciar Sesion</a>
+						</li>
+						<li>
+							<a href="../pages/registro.html">Registro</a>
+						</li>
+					</ul>
+				</nav>
+			</header>
 
-            <!----------------------------------------------    MAIN    ----------------------------->
-            <div class="container-fluid">
-                <div class="row" id="bgLogin">
-                    <div class="col-12 col-md-8">
-                        <main id="mainLogin">
-                            <h1>&bull; Iniciar Sesion &bull; </h1>
-                            <form action="#" method="post" enctype="multipart/form-data" class="mb-5" id="login_form">
-                                <legend>Ingresa tus datos</legend>
-                                <div class="username">
-                                    <label for="username"></label>
-                                    <input type="email" name="email" id="username" placeholder="email" autocomplete="off" required>
-                                </div>
-                                <div class="passw">
-                                    <label for="password"></label>
-                                    <input type="password" placeholder="Password" name="password" id="password">
-                                </div>
-                                <div class="checkbox">
-                                    <input type="checkbox" name="conectado" id="conectado">
-                                    <label for="conectado">Mantenerme conectado</label>
-                                </div>
-                                <div class="submit">
-                                    <input type="submit" value="Iniciar Sesion" id="button_form">
-                                </div>
-                            </form>
-                        </main>
-                    </div>
-                </div>
-            </div>
-            <!-------------------------------------------      FOOTER     ---------------------------->
-            <footer>
-                <div id="boxFooter">
-                    <div class="boxTxFooter boxTxFooter1">
-                        <p>En aLguN luGar 2456 - 
-                            Buenos Aires - Argentina
-                            CP-999</p>
-                    </div>
-                    <div class="boxTxFooter boxTxFooter2">
-                        <a href="../index.html"><h2>Proyecto <br> Ajedrez</h2></a>
-                    </div>
-                    <div class="boxTxFooter boxTxFooter3">
-                        <a href="https://wa.me/1168823508" target="_blank">+54 9 11 6882 3508</a>
-                        <a href="mailto:amgiribaldi@gmail.com">amgiribaldi@gmail.com</a>
-                    </div>
-                </div>
-            </footer>
-        </div><!--container-fluid-close-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <!-- <script src="./scripts/script.js"></script> -->
-    </body>
+			<!----------------------------------------------    MAIN    ----------------------------->
+			<div class="container-fluid">
+				<div class="row" id="bgLogin">
+					<div class="col-12 col-md-8">
+						<main id="mainLogin">
+							<h1>&bull; Iniciar Sesion &bull;</h1>
+							<form class="mb-5" id="login_form">
+								<legend>Ingresa tus datos</legend>
+								<div class="username">
+									<label for="loginEmail"></label>
+									<input
+										type="email"
+										id="loginEmail"
+										placeholder="email"
+										required
+									/>
+								</div>
+								<div class="passw">
+									<label for="loginPassw"></label>
+									<input
+										type="password"
+										placeholder="Contraseña"
+										id="loginPassw"
+										required
+									/>
+								</div>
+								<div class="checkbox">
+									<input type="checkbox" value="" id="recordarme" />
+									<label for="recordarme">Mantenerme conectado</label>
+								</div>
+								<div class="submit">
+									<input type="submit" value="Iniciar Sesion" id="btnLogin" />
+								</div>
+							</form>
+						</main>
+					</div>
+				</div>
+			</div>
+			<!-------------------------------------------      FOOTER     ---------------------------->
+			<footer>
+				<div id="boxFooter">
+					<div class="boxTxFooter boxTxFooter1">
+						<p>En aLguN luGar 2456 - Buenos Aires - Argentina CP-999</p>
+					</div>
+					<div class="boxTxFooter boxTxFooter2">
+						<a href="../index.html"
+							><h2>
+								Proyecto <br />
+								Ajedrez
+							</h2></a
+						>
+					</div>
+					<div class="boxTxFooter boxTxFooter3">
+						<a href="https://wa.me/1168823508" target="_blank"
+							>+54 9 11 6882 3508</a
+						>
+						<a href="mailto:amgiribaldi@gmail.com">amgiribaldi@gmail.com</a>
+					</div>
+				</div>
+			</footer>
+		</div>
+		<!--container-fluid-close-->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+			crossorigin="anonymous"
+		></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/luxon@3.0.1/build/global/luxon.min.js"></script>
+		<script src="../scripts/script.js"></script>
+	</body>
+</html>
