Sacando los alert, reemplazando por sweetalert

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class="play">
 							<span class="shadow"></span>
 							<span class="edge"></span>
-							<a class="front text" href="#">&bull; Jugar &bull;</a>
+							<a id="btnJugar" class="front text" href="#">&bull; Jugar &bull;</a>
 						</div>
 					</div>
 					<div class="row row8 rowLocker">
@@ -265,6 +265,9 @@
 						<div class="col-2"></div>
 					</div>
 				</div>
+				<!-- <div class="container d-flex justify-content-center p-5">
+					<button class="btn btn-info btn-lg" id="botonSwal">Click me</button>
+				</div> -->
 			</main>
 			<!-------------------------------------------      FOOTER     ---------------------------->
 			<footer>
