--- a/pages/registro.html
+++ b/pages/registro.html
@@ -116,9 +116,7 @@
 						class="btnEnviar"
 						type="submit"
 						id="btnEnviar"
-						data-bs-toggle="modal"
-						data-bs-target="#modalRegistro"
-					>
+						>
 						<!-- Button trigger modal -->
 						<div class="svg-wrapper-1">
 							<div class="svg-wrapper">
@@ -140,7 +138,8 @@
 					</button>
 					<!-- Ventana Modal -->
 					<!-- data-bs-backdrop="static" data-bs-keyboard="false" -->
-					<div
+					
+					<!-- <div
 						class="modal fade"
 						id="modalRegistro"
 						tabindex="-1"
@@ -176,7 +175,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</main>
 			<!-------------------------------------------      FOOTER     ---------------------------->
