Arregle otro link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<a href="./pages/login.html">Iniciar Sesion</a>
 						</li>
 						<li>
-							<a href="./pages/tablero.html">Registro</a>
+							<a href="./pages/registro.html">Registro</a>
 						</li>
 					</ul>
 				</nav>
