Agregue tablero hecho con for

--- a/pages/tablero.html
+++ b/pages/tablero.html
@@ -33,7 +33,7 @@
 				<nav>
 					<ul>
 						<li>
-							<a href="../pages/login.html">Cerrar Sesion</a>
+							<a id="cerrarSesion" href="../pages/login.html">Cerrar Sesion</a>
 						</li>
 						<!-- <li>
 							<a href="../pages/registro.html">Registro</a>
@@ -43,7 +43,7 @@
 			</header>
 
 			<!----------------------------------------------    MAIN    ----------------------------->
-			<main>
+			<!-- <main>
 				<div class="container-fluid" id="board">
 					<div class="row row8 rowLocker mt-">
 						<div class="col-1"></div>
@@ -51,28 +51,36 @@
 							<span>8</span>
 						</div>
 						<div class="col-1 col8A colLocker whiteLocker">
-							<img src="../img/torreNegro.svg" alt="Torre negro" />
+                            <img class="torreNegro d-off" src="../img/torreNegro.svg" alt="Torre negro" />
+							<img class="torreBlanco d-off" src="../img/torreBlanco.svg" alt="Torre blanco" />
 						</div>
 						<div class="col-1 col8B colLocker blackLocker">
-							<img src="../img/caballoNegro.svg" alt="Caballo negro" />
+							<img class="caballoNegro d-off" src="../img/caballoNegro.svg" alt="Caballo negro" />
+							<img class="caballoBlanco d-off" src="../img/caballoBlanco.svg" alt="Caballo blanco" />
 						</div>
 						<div class="col-1 col8C colLocker whiteLocker">
-							<img src="../img/alfilNegro.svg" alt="Alfil negro" />
+                            <img class="alfilNegro d-off" src="../img/alfilNegro.svg" alt="Alfil negro" >
+							<img class="alfilBlanco d-off" src="../img/alfilBlanco.svg" alt="Alfil blanco" />
 						</div>
 						<div class="col-1 col8D colLocker blackLocker">
-							<img src="../img/reinaNegro.svg" alt="Reina negro" />
+                            <img class="reinaNegro d-off" src="../img/reinaNegro.svg" alt="Reina negro">
+							<img class="reinaBlanco d-off" src="../img/reinaBlanco.svg" alt="Reina blanco" />
 						</div>
 						<div class="col-1 col8E colLocker whiteLocker">
-							<img src="../img/reyNegro.svg" alt="Rey negro" />
+                            <img class="reyNegro d-off" src="../img/reyNegro.svg" alt="Rey negro" />
+							<img class="reyBlanco d-off" src="../img/reyBlanco.svg" alt="Rey blanco" />
 						</div>
 						<div class="col-1 col8F colLocker blackLocker">
-							<img src="../img/alfilNegro.svg" alt="Alfil negro" />
+                            <img class="alfilNegro d-off" src="../img/alfilNegro.svg" alt="Alfil negro" >
+							<img class="alfilBlanco d-off" src="../img/alfilBlanco.svg" alt="Alfil blanco" />
 						</div>
 						<div class="col-1 col8G colLocker whiteLocker">
-							<img src="../img/caballoNegro.svg" alt="Caballo negro" />
+                            <img class="caballoNegro d-off" src="../img/caballoNegro.svg" alt="Caballo negro" />
+							<img class="caballoBlanco d-off" src="../img/caballoBlanco.svg" alt="Caballo blanco" />
 						</div>
 						<div class="col-1 col8H colLocker blackLocker">
-							<img src="../img/torreNegro.svg" alt="Torre negro" />
+							<img class="torreNegro d-off" src="../img/torreNegro.svg" alt="Torre negro" />
+							<img class="torreBlanco d-off" src="../img/torreBlanco.svg" alt="Torre blanco" />
 						</div>
 						<div class="col-2"></div>
 					</div>
@@ -82,28 +90,36 @@
 							<span>7</span>
 						</div>
 						<div class="col-1 col7A colLocker blackLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+							<img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7B colLocker whiteLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7C colLocker blackLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7D colLocker whiteLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7E colLocker blackLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7F colLocker whiteLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7G colLocker blackLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-1 col7H colLocker whiteLocker">
-							<img src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
+                            <img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
 						</div>
 						<div class="col-2"></div>
 					</div>
@@ -173,28 +189,36 @@
 							<span>2</span>
 						</div>
 						<div class="col-1 col2A colLocker whiteLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2B colLocker blackLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2C colLocker whiteLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2D colLocker blackLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2E colLocker whiteLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2F colLocker blackLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2G colLocker whiteLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-1 col2H colLocker blackLocker">
-							<img src="../img/peonBlanco.svg" alt="Peon blanco" />
+							<img class="peonBlanco d-off" src="../img/peonBlanco.svg" alt="Peon blanco" />
+                            <img class="peonNegro d-off" src="../img/peonNegro.svg" alt="Peon negro" />
 						</div>
 						<div class="col-2"></div>
 					</div>
@@ -204,28 +228,36 @@
 							<span>1</span>
 						</div>
 						<div class="col-1 col1A colLocker blackLocker">
-							<img src="../img/torreBlanco.svg" alt="Torre blanco" />
+							<img class="torreBlanco d-off" src="../img/torreBlanco.svg" alt="Torre blanco" />
+                            <img class="torreNegro d-off" src="../img/torreNegro.svg" alt="Torre negro" />
 						</div>
 						<div class="col-1 col1B colLocker whiteLocker">
-							<img src="../img/caballoBlanco.svg" alt="Caballo blanco" />
+							<img class="caballoBlanco d-off" src="../img/caballoBlanco.svg" alt="Caballo blanco" />
+                            <img class="caballoNegro d-off" src="../img/caballoNegro.svg" alt="Caballo negro" />
 						</div>
 						<div class="col-1 col1C colLocker blackLocker">
-							<img src="../img/alfilBlanco.svg" alt="Alfil blanco" />
+							<img class="alfilBlanco d-off" src="../img/alfilBlanco.svg" alt="Alfil blanco" />
+                            <img class="alfilNegro d-off" src="../img/alfilNegro.svg" alt="Alfil negro" >
 						</div>
 						<div class="col-1 col1D colLocker whiteLocker">
-							<img src="../img/reinaBlanco.svg" alt="Reina blanco" />
+							<img class="reinaBlanco d-off" src="../img/reinaBlanco.svg" alt="Reina blanco" />
+                            <img class="reinaNegro d-off" src="../img/reinaNegro.svg" alt="Reina negro">
 						</div>
 						<div class="col-1 col1E colLocker blackLocker">
-							<img src="../img/reyBlanco.svg" alt="Rey blanco" />
+							<img class="reyBlanco d-off" src="../img/reyBlanco.svg" alt="Rey blanco" />
+                            <img class="reyNegro d-off" src="../img/reyNegro.svg" alt="Rey negro" />
 						</div>
 						<div class="col-1 col1F colLocker whiteLocker">
-							<img src="../img/alfilBlanco.svg" alt="Alfil blanco" />
+							<img class="alfilBlanco d-off" src="../img/alfilBlanco.svg" alt="Alfil blanco" />
+                            <img class="alfilNegro d-off" src="../img/alfilNegro.svg" alt="Alfil negro" >
 						</div>
 						<div class="col-1 col1G colLocker blackLocker">
-							<img src="../img/caballoBlanco.svg" alt="Caballo blanco" />
+							<img class="caballoBlanco d-off" src="../img/caballoBlanco.svg" alt="Caballo blanco" />
+                            <img class="caballoNegro d-off" src="../img/caballoNegro.svg" alt="Caballo negro" />
 						</div>
 						<div class="col-1 col1H colLocker whiteLocker">
-							<img src="../img/torreBlanco.svg" alt="Torre blanco" />
+							<img class="torreBlanco d-off" src="../img/torreBlanco.svg" alt="Torre blanco" />
+                            <img class="torreNegro d-off" src="../img/torreNegro.svg" alt="Torre negro" />
 						</div>
 						<div class="col-2"></div>
 					</div>
@@ -258,10 +290,21 @@
 						<div class="col-2"></div>
 					</div>
 				</div>
-				<!-- <div class="container d-flex justify-content-center p-5">
-					<button class="btn btn-info btn-lg" id="botonSwal">Click me</button>
-				</div> -->
-			</main>
+			</main> -->
+            <div class="container-fluid">
+                <div class="row m-5">
+                    <div class="col-2">
+                        <strong>BLA</strong>
+                    </div>
+                    <div class="col-8">
+                        <div id="Tablero"></div>
+                    </div>
+                    <div class="col-2">
+                        <strong>BLA</strong>
+                    </div>
+                </div>
+            </div>
+            
 			<!-------------------------------------------      FOOTER     ---------------------------->
 			<footer>
 				<div id="boxFooter">
