Entrega Proyecto Final-unfinished

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -111,12 +111,7 @@
 							</label>
 						</form>
 					</div>
-					<!-- data-bs-toggle="modal" data-bs-target="#modalRegistro" -->
-					<button
-						class="btnEnviar"
-						type="submit"
-						id="btnEnviar"
-						>
+					<button class="btnEnviar" type="submit" id="btnEnviar">
 						<!-- Button trigger modal -->
 						<div class="svg-wrapper-1">
 							<div class="svg-wrapper">
@@ -136,46 +131,6 @@
 						</div>
 						<span>Enviar</span>
 					</button>
-					<!-- Ventana Modal -->
-					<!-- data-bs-backdrop="static" data-bs-keyboard="false" -->
-					
-					<!-- <div
-						class="modal fade"
-						id="modalRegistro"
-						tabindex="-1"
-						aria-labelledby="modalRegistroLabel"
-						aria-hidden="true"
-						data-bs-backdrop="static"
-						data-bs-keyboard="false"
-					>
-						<div class="modal-dialog">
-							<div class="modal-content">
-								<div class="modal-header">
-									<h5 class="modal-title" id="modalRegistroLabel">
-										Registro exitoso
-									</h5>
-									<button
-										type="button"
-										class="btn-close"
-										data-bs-dismiss="modal"
-										aria-label="Close"
-									></button>
-								</div>
-								<div class="modal-body">
-									<span>Ya puedes iniciar sesion</span>
-								</div>
-								<div class="modal-footer">
-									<button
-										type="button"
-										class="btn btn-secondary"
-										data-bs-dismiss="modal"
-									>
-										Close
-									</button>
-								</div>
-							</div>
-						</div>
-					</div> -->
 				</div>
 			</main>
 			<!-------------------------------------------      FOOTER     ---------------------------->
@@ -208,8 +163,21 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/luxon@3.0.1/build/global/luxon.min.js"></script>
+		<script
+			type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/toastify-js"
+		></script>
+		<script src="https://cdn.jsdelivr.net/npm/luxon@3.0.1/build/global/luxon.min.js"></script>
 		<script src="../scripts/script.js"></script>
 	</body>
+	<!--
+  /$$$$$$  /$$      /$$  /$$$$$$ 
+ /$$__  $$| $$$    /$$$ /$$__  $$
+| $$  \ $$| $$$$  /$$$$| $$  \__/
+| $$$$$$$$| $$ $$/$$ $$| $$ /$$$$
+| $$__  $$| $$  $$$| $$| $$|_  $$
+| $$  | $$| $$ \ $ | $$| $$  \ $$
+| $$  | $$| $$ \/  | $$|  $$$$$$/
+|__/  |__/|__/     |__/ \______/ 
+ -->
 </html>
