--- a/pages/tablero.html
+++ b/pages/tablero.html
@@ -36,9 +36,6 @@
                             <span id="usuarioLogueado" class="me-5"></span>
 							<a id="cerrarSesion" href="../pages/login.html">Cerrar Sesion</a>
 						</li>
-						<!-- <li>
-							<a href="../pages/registro.html">Registro</a>
-						</li> -->
 					</ul>
 				</nav>
 			</header>
@@ -295,8 +292,8 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <div id="ingresoJugada">
-                            <input id="instruccion"><span class="ms-3">Jugada</span></input>
+                        <div id="ingresoJugada" class="d-none">
+                            <input id="instruccion"><span class="ms-3">Jugada-No funciona todavia</span></input>
                             <div id="jugadas"></div>
                         </div>
                         <div id="radio">
@@ -320,7 +317,6 @@
                     <button id="borrarFichas">Borrar Fichas</button>
                 </div>
             </div>
-            
 			<!-------------------------------------------      FOOTER     ---------------------------->
 			<footer>
 				<div id="boxFooter">
