--- a/pages/login.html
+++ b/pages/login.html
@@ -68,7 +68,7 @@
 										required
 									/>
 								</div>
-								<div class="checkbox">
+								<div class="checkbox d-none">
 									<input type="checkbox" value="" id="recordarme" />
 									<label for="recordarme">Mantenerme conectado</label>
 								</div>
@@ -114,4 +114,14 @@
         <script src="https://cdn.jsdelivr.net/npm/luxon@3.0.1/build/global/luxon.min.js"></script>
 		<script src="../scripts/script.js"></script>
 	</body>
+	<!--
+  /$$$$$$  /$$      /$$  /$$$$$$ 
+ /$$__  $$| $$$    /$$$ /$$__  $$
+| $$  \ $$| $$$$  /$$$$| $$  \__/
+| $$$$$$$$| $$ $$/$$ $$| $$ /$$$$
+| $$__  $$| $$  $$$| $$| $$|_  $$
+| $$  | $$| $$ \ $ | $$| $$  \ $$
+| $$  | $$| $$ \/  | $$|  $$$$$$/
+|__/  |__/|__/     |__/ \______/ 
+ -->
 </html>
